# Prediction-of-Cirrhosis-Outcomes

./: README.md  pyproject.toml
src/: model.py
